[gd_scene load_steps=18 format=2]

[ext_resource path="res://props/teleporter_door.png" type="Texture" id=1]
[ext_resource path="res://props/teleporter.png" type="Texture" id=2]
[ext_resource path="res://props/teleporter.gd" type="Script" id=3]
[ext_resource path="res://props/interactables/interactable.gd" type="Script" id=4]
[ext_resource path="res://pieces/entity_detector.tscn" type="PackedScene" id=5]
[ext_resource path="res://props/teleporter.wav" type="AudioStream" id=6]
[ext_resource path="res://props/teleporter_zap.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 120, 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 60, 8 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 28, 4 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 20, 4 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 20, 8 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("door:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("door:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("zap:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "close"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("door:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 8, 7, 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("door:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "begin_teleport"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath("door:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=10]
resource_name = "zap"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("zap:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "teleport"
} ]
}

[node name="teleporter" type="StaticBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )

[node name="base" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="door" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 10

[node name="zap" type="Sprite" parent="."]
z_index = 20
texture = ExtResource( 7 )
hframes = 10

[node name="hitbox0" type="CollisionShape2D" parent="."]
position = Vector2( 0, 76 )
shape = SubResource( 1 )

[node name="hitbox1" type="CollisionShape2D" parent="."]
position = Vector2( 0, 68 )
shape = SubResource( 2 )

[node name="hitbox2" type="CollisionShape2D" parent="."]
position = Vector2( -20, 56 )
shape = SubResource( 6 )
disabled = true

[node name="hitbox3" type="CollisionShape2D" parent="."]
position = Vector2( -20, 44 )
shape = SubResource( 7 )
disabled = true

[node name="hitbox4" type="CollisionShape2D" parent="."]
position = Vector2( -20, 36 )
shape = SubResource( 8 )
disabled = true

[node name="interactable" type="Node2D" parent="."]
position = Vector2( 84, 40 )
script = ExtResource( 4 )
highlight_distance = 32.0
description = "Space Machine"
verb = "Activate"

[node name="centre" type="Position2D" parent="."]
position = Vector2( -20, 16 )

[node name="entity_detector" parent="." instance=ExtResource( 5 )]
position = Vector2( -20, 24 )

[node name="hitbox" type="CollisionShape2D" parent="entity_detector"]
shape = SubResource( 9 )
disabled = true

[node name="animator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/close = SubResource( 4 )
anims/open = SubResource( 5 )
anims/zap = SubResource( 10 )

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 5.0
bus = "SFX"

[node name="teleport_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="activated" from="interactable" to="." method="_on_interactable_activated"]
[connection signal="activated" from="entity_detector" to="." method="_on_entity_detector_activated"]
[connection signal="timeout" from="teleport_timer" to="." method="_on_teleport_timer_timeout"]
